ora tutto via API e non connessione diretta al db
